# vigdis-heimdall-v2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.py
docs/: USAGE.md
examples/: README.md  basic_tracking.py  complete_uav_tracking.py  hand_projection.py  hands_to_laser_webcam 2.py  hands_to_laser_webcam.py  mouse_controlled_laser.py  mouse_controlled_laser2.py  test_tracker_only.py  test_uav_tracker_display.py  uav_tracker_laser_example.py
heimdall/: UAV_tracker.py  __init__.py  app.py  config.py  detection.py  hand.py  laser.py  sort.py
heimdall/core/: __init__.py  detection.py  hand.py  laser.py  tracker.py
heimdall/test_and_debug/: test.py
heimdall/utils/: __init__.py
tests/: __init__.py  test_gpu_acceleration.py
tests/debug/: debug_w_hands.py  pure_hands.py
tests/integration/: __init__.py
vigdis_heimdall.egg-info/: PKG-INFO
yolo_dataset/: dataset.yaml
yolo_dataset/labels/: train.cache  val.cache
yolo_uav_results/visible_detection/: args.yaml
yolo_uav_results/visible_detection2/: args.yaml
yolo_uav_results/visible_detection3/: args.yaml
